--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,19 +5,19 @@ body {
     font-size: 62.5%;
 }
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 a {
     color: inherit;
     text-decoration: none;
 }
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-@media only screen and (max-width: 2000px) {
+/* @media only screen and (max-width: 2000px) {
     html {
         font-size: 54%;
     }
-}
+} */
